[Test] Completed CommandValidator tests